--- a/services.html
+++ b/services.html
@@ -22,7 +22,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
 	<!-- //css files -->
-	
+	<!-- aos.css files -->
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<!-- //aos.css files -->
 	<!-- google fonts -->
 	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -150,7 +152,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <section class="text-content">
 	<div class="overlay-inner py-5">
 		<div class="container py-md-3">
-			<div class="test-info">
+			<div class="test-info" data-aos="fade-right">
 				<h4 class="tittle">Наслаждайтесь Поездкой</h4>
 				<p class="mt-3">Duis nisi sapien, elementum finibus fermentum eget, aliquet leo et. Mauris hendrerit vel ex. Quisque vitae luctus massa.
 				Phasellus sed aliquam leo a massa eu fringilla. Integer ultrices finibus sed nisi. in convallis felis dapibus
@@ -347,7 +349,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</a>
 </div>
 <!-- move top -->
+<!-- jQuery CDN -->
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+  
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+         AOS.init({
+	  // Global settings:
+	  disable: false, // accepts following values: 'phone', 'tablet', 'mobile', boolean, expression or function
+	  startEvent: 'DOMContentLoaded', // name of the event dispatched on the document, that AOS should initialize on
+	  initClassName: 'aos-init', // class applied after initialization
+	  animatedClassName: 'aos-animate', // class applied on animation
+	  useClassNames: false, // if true, will add content of `data-aos` as classes on scroll
+	  disableMutationObserver: false, // disables automatic mutations' detections (advanced)
+	  debounceDelay: 50, // the delay on debounce used while resizing window (advanced)
+	  throttleDelay: 99, // the delay on throttle used while scrolling the page (advanced)
 
+
+	  // Settings that can be overridden on per-element basis, by `data-aos-*` attributes:
+	  offset: 120, // offset (in px) from the original trigger point
+	  delay: 0, // values from 0 to 3000, with step 50ms
+	  duration: 400, // values from 0 to 3000, with step 50ms
+	  easing: 'ease', // default easing for AOS animations
+	  once: false, // whether animation should happen only once - while scrolling down
+	  mirror: false, // whether elements should animate out while scrolling past them
+	  anchorPlacement: 'top-bottom', // defines which position of the element regarding to window should trigger the animation
+
+	});
+    </script>
 	
 </body>
 </html>
