--- a/services.html
+++ b/services.html
@@ -169,7 +169,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- places -->
 <section class="trav-grids py-5" id="desti">
 	<div class="container py-xl-5 py-lg-3">
-		<h3 class="heading text-capitalize text-center mb-lg-5 mb-4">Туристические Места</h3>
+		<h3 class="heading text-capitalize text-center mb-lg-5 mb-4" data-aos="zoom-in">Туристические Места</h3>
 		<div class="row">
 			<div class="col-lg-6 mt-4">
 				<div class="grids-tem-one">
