--- a/packages.html
+++ b/packages.html
@@ -22,7 +22,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
 	<!-- //css files -->
-	
+	<!-- aos.css files -->
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<!-- //aos.css files -->
 	<!-- google fonts -->
 	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -66,7 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- tour packages -->
 <section class="packages pt-5">
 	<div class="container py-lg-4 py-sm-3">
-		<h2 class="heading text-capitalize text-center"> Discover our tour packages</h2>
+		<h2 class="heading text-capitalize text-center"> Откройте Для Себя Наши Туры</h2>
 		<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue. Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
 		<div class="row">
 			
@@ -191,11 +193,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- destinations -->
 <section class="destinations py-5" id="destinations">
 	<div class="container py-xl-5 py-lg-3">
-		<h3 class="heading text-capitalize text-center"> Popular Destinations</h3>
+		<h3 class="heading text-capitalize text-center"> Популярные Направления</h3>
 		<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue. Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
 		<div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-				<h4 class="destination mb-3">China</h4>
+				<h4 class="destination mb-3">Китай</h4>
 				<div class="image-position position-relative">
 					<img src="images/china.jpg" class="img-fluid" alt="">
 					<div class="rating">
@@ -210,13 +212,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
-						<h4>China</h4>
-						<a href="booking.html">Book Now</a>
+						<h4>Китай</h4>
+						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-				<h4 class="destination mb-3">Malaysia</h4>
+				<h4 class="destination mb-3">Малайзия</h4>
 				<div class="image-position position-relative">
 					<img src="images/malaysia.jpg" class="img-fluid" alt="">
 					<div class="rating">
@@ -231,13 +233,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
-						<h4>Malaysia</h4>
-						<a href="booking.html">Book Now</a>
+						<h4>Малайзия</h4>
+						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-				<h4 class="destination mb-3">Japan</h4>
+				<h4 class="destination mb-3">Япония</h4>
 				<div class="image-position position-relative">
 					<img src="images/japan.jpg" class="img-fluid" alt="">
 					<div class="rating">
@@ -252,13 +254,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
-						<h4>Japan</h4>
-						<a href="booking.html">Book Now</a>
+						<h4>Япония</h4>
+						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-				<h4 class="destination mb-3">Singapore</h4>
+				<h4 class="destination mb-3">Сингапур</h4>
 				<div class="image-position position-relative">
 					<img src="images/singapore.jpg" class="img-fluid" alt="">
 					<div class="rating">
@@ -273,8 +275,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
-						<h4>Singapore</h4>
-						<a href="booking.html">Book Now</a>
+						<h4>Сингапур</h4>
+						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
 			</div>
@@ -370,7 +372,35 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</a>
 </div>
 <!-- move top -->
+	
+   <!-- jQuery CDN -->
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+  
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+         AOS.init({
+	  // Global settings:
+	  disable: false, // accepts following values: 'phone', 'tablet', 'mobile', boolean, expression or function
+	  startEvent: 'DOMContentLoaded', // name of the event dispatched on the document, that AOS should initialize on
+	  initClassName: 'aos-init', // class applied after initialization
+	  animatedClassName: 'aos-animate', // class applied on animation
+	  useClassNames: false, // if true, will add content of `data-aos` as classes on scroll
+	  disableMutationObserver: false, // disables automatic mutations' detections (advanced)
+	  debounceDelay: 50, // the delay on debounce used while resizing window (advanced)
+	  throttleDelay: 99, // the delay on throttle used while scrolling the page (advanced)
 
+
+	  // Settings that can be overridden on per-element basis, by `data-aos-*` attributes:
+	  offset: 120, // offset (in px) from the original trigger point
+	  delay: 0, // values from 0 to 3000, with step 50ms
+	  duration: 400, // values from 0 to 3000, with step 50ms
+	  easing: 'ease', // default easing for AOS animations
+	  once: false, // whether animation should happen only once - while scrolling down
+	  mirror: false, // whether elements should animate out while scrolling past them
+	  anchorPlacement: 'top-bottom', // defines which position of the element regarding to window should trigger the animation
+
+	});
+    </script>
 	
 </body>
 </html>
