--- a/packages.html
+++ b/packages.html
@@ -78,11 +78,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Paris, France.</h6>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Париж, Франция.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Duration : <span>10 Days</span></li>
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
@@ -92,11 +92,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Los Angles, USA.</h6>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Лос-Анджелес, США.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Duration : <span>10 Days</span></li>
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
@@ -106,11 +106,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Agra, India.</h6>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Агра, Индия.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Duration : <span>10 Days</span></li>
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li>  
 					</ul>
 				</div>
 			</div>
@@ -120,11 +120,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Paris, France.</h6>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Париж, Франция.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Duration : <span>10 Days</span></li>
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
@@ -135,11 +135,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Paris, France.</h6>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Париж, Франция.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Duration : <span>10 Days</span></li>
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
@@ -149,11 +149,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Los Angles, USA.</h6>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Лос-Анджелес, США.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Duration : <span>10 Days</span></li>
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
@@ -163,11 +163,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Agra, India.</h6>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Агра, Индия.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Duration : <span>10 Days</span></li>
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
@@ -177,11 +177,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Paris, France.</h6>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Париж, Франция.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Duration : <span>10 Days</span></li>
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
