--- a/packages.html
+++ b/packages.html
@@ -292,18 +292,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="row footer-top">
 			<div class="col-lg-3 col-sm-6 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Address</h3>
+					<h3>Адрес</h3>
 				</div>
 				<div class="footer-text">
-					<p>Location : 1234 lock, Charlotte, North Carolina, United States</p>
-					<p>Phone : +12 534894364</p>
-					<p>Email : <a href="mailto:info@example.com">info@example.com</a></p>
+					<p>Расположение: 1234 lock, Charlotte, North Carolina, United States</p>
+					<p>Телефон: +12 534894364</p>
+					<p>Электронная почта: <a href="mailto:info@example.com">info@example.com</a></p>
 					<p>Fax : +12 534894364</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-sm-6 footer-grid_section mt-sm-0 mt-4">
 				<div class="footer-title">
-					<h3>About Us</h3>
+					<h3>О нас</h3>
 				</div>
 				<div class="footer-text">
 					<p>Vivamus magna justo, laci niats eget consectetur sed, conval lis at tellus. Nulla quis lorem ipnt libero.
@@ -318,7 +318,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Travel Places</h3>
+					<h3>Места для путешествий</h3>
 				</div>
 				<div class="row">
 					<ul class="col-6 links">
@@ -340,7 +340,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Newsletter</h3>
+					<h3>Новостная рассылка</h3>
 				</div>
 				<div class="footer-text">
 					<p>
