--- a/index.html
+++ b/index.html
@@ -422,9 +422,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h3>Адрес</h3>
 				</div>
 				<div class="footer-text">
-					<p>Location : 1234 lock, Charlotte, North Carolina, United States</p>
-					<p>Phone : +12 534894364</p>
-					<p>Email : <a href="mailto:info@example.com">info@example.com</a></p>
+					<p>Расположение: 1234 lock, Charlotte, North Carolina, United States</p>
+					<p>Телефон: +12 534894364</p>
+					<p>Электронная почта: <a href="mailto:info@example.com">info@example.com</a></p>
 					<p>Fax : +12 534894364</p>
 				</div>
 			</div>
