--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-lg-4 col-sm-6 mt-lg-0 mt-5">
-				<div class="grid-info">
+				<div class="grid-info" data-aos="fade-right">
 					<div class="icon">
 						<span class="fa fa-gift"></span>
 					</div>
