--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <section class="text-content">
 	<div class="overlay-inner py-5">
 		<div class="container py-md-3">
-			<div class="test-info">
+			<div class="test-info"  data-aos="fade-right">
 				<h4 class="tittle">Наслаждайтесь Поездкой</h4>
 				<p class="mt-3">Duis nisi sapien, elementum finibus fermentum eget, aliquet leo et. Mauris hendrerit vel ex. Quisque vitae luctus massa.
 				Phasellus sed aliquam leo a massa eu fringilla. Integer ultrices finibus sed nisi. in convallis felis dapibus
