--- a/contact.html
+++ b/contact.html
@@ -66,24 +66,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- Contact -->
 <section class="contact py-5">
 	<div class="container py-lg-5 py-sm-3">
-			<h2 class="heading text-capitalize text-center mb-sm-5 mb-4"> Get In Touch with us</h2>
+			<h2 class="heading text-capitalize text-center mb-sm-5 mb-4"> Свяжитесь С Нами</h2>
 			<ul class="list-unstyled row text-center mt-lg-5 mt-4 px-lg-5">
                 <li class="col-md-4 col-sm-6 adress-w3pvt-info">
                     <div class=" adress-icon">
                         <span class="fa fa-map-marker"></span>
                     </div>
 
-                    <h6>Location</h6>
+                    <h6>Расположение</h6>
                     <p>The company name
-                        <br>Addison Township, IL, USA. </p>
+                        <br>Запорожье, Украина. </p>
                 </li>
 
                 <li class="col-md-4 col-sm-6 adress-w3pvt-info mt-sm-0 mt-4">
                     <div class="adress-icon">
                         <span class="fa fa-envelope-open-o"></span>
                     </div>
-                    <h6>Phone & Email</h6>
-                    <p>+(122) 123 456 7890</p>
+                    <h6>Телефон и электронная почта</h6>
+                    <p>+38(098) 577 15 79</p>
                     <a href="mailto:info@example.com" class="mail">info@examplemail.com</a>
                 </li>
                 <li class="col-md-4 col-sm-6 adress-w3pvt-info mt-md-0 mt-4">
@@ -92,7 +92,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <span class="fa fa-comments-o"></span>
                     </div>
 
-                    <h6>Stay In Touch</h6>
+                    <h6>Оставайтесь на связи</h6>
 					<ul class="social_section_1info mt-2">
 						<li class="mb-2 facebook"><a href="#"><span class="fa fa-facebook"></span></a></li>
 						<li class="mb-2 twitter"><a href="#"><span class="fa fa-twitter"></span></a></li>
@@ -122,13 +122,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</form>
 					</div>
 					<div class="col-lg-6 col-md-6 contact-right pl-lg-5">
-						<h4>Do you have any questions about us? write to us.</h4>
+						<h4>У Вас Есть Вопросы О Нас? Напишите Нам.</h4>
 						<p class="mt-md-4 mt-2">Duis nisi sapien, elementum finibus fermentum eget, aliquet et leo. Mauris hendrerit vel ex.
 						Quisque vitae luctus massa. Phas ellus sed aliquam leo. Vestibulum ullamcorper massa eut sed fringilla. Integer ultrices finibus sed nisi.
 						in convallis felis da bus sit amet  aliquet et leo dolor sit amet aliquet.</p>
-						<h5 class="mt-lg-5 mt-3">Office Hours</h5>
-						<p class="mt-3">Monday to Friday : 09 am to 06 pm</p>
-						<p>Saturday and Sunay : 10 am to 04 pm</p>
+						<h5 class="mt-lg-5 mt-3">Рабочие часы</h5>
+						<p class="mt-3">С понедельника по пятницу: с 09:00 до 18:00.</p>
+						<p>Суббота и воскресенье: выходной.</p>
 					</div>
 				</div>
 			</div>
@@ -149,18 +149,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="row footer-top">
 			<div class="col-lg-3 col-sm-6 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Address</h3>
+					<h3>Адрес</h3>
 				</div>
 				<div class="footer-text">
-					<p>Location : 1234 lock, Charlotte, North Carolina, United States</p>
-					<p>Phone : +12 534894364</p>
-					<p>Email : <a href="mailto:info@example.com">info@example.com</a></p>
+					<p>Расположение:  1234 lock, Charlotte, North Carolina, United States</p>
+					<p>Телефон:  +12 534894364</p>
+					<p>Электронная почта: <a href="mailto:info@example.com">info@example.com</a></p>
 					<p>Fax : +12 534894364</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-sm-6 footer-grid_section mt-sm-0 mt-4">
 				<div class="footer-title">
-					<h3>About Us</h3>
+					<h3>О нас</h3>
 				</div>
 				<div class="footer-text">
 					<p>Vivamus magna justo, laci niats eget consectetur sed, conval lis at tellus. Nulla quis lorem ipnt libero.
@@ -175,7 +175,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Travel Places</h3>
+					<h3>Места для путешествий</h3>
 				</div>
 				<div class="row">
 					<ul class="col-6 links">
@@ -197,7 +197,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Newsletter</h3>
+					<h3>Новостная рассылка</h3>
 				</div>
 				<div class="footer-text">
 					<p>
