--- a/booking.html
+++ b/booking.html
@@ -66,48 +66,48 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- Booking -->
 <section class="contact py-5">
 	<div class="container py-lg-5 py-sm-4">
-		<h2 class="heading text-capitalize text-center mb-lg-5 mb-4"> Book Your Tour</h2>
+		<h2 class="heading text-capitalize text-center mb-lg-5 mb-4">Забронируйте Тур</h2>
 		<div class="contact-grids">
 			<div class="row">
 				<div class="col-lg-7 contact-left-form">
 					<form action="#" method="post" class="row">
 						<div class="col-sm-6 form-group contact-forms">
-						  <input type="text" class="form-control" placeholder="Name" required="">
+						  <input type="text" class="form-control" placeholder="Имя" required="">
 						</div>
 						<div class="col-sm-6 form-group contact-forms">
-						  <input type="email" class="form-control" placeholder="Email" required="">
+						  <input type="email" class="form-control" placeholder="Эл.адрес" required="">
 						</div>
 						<div class="col-sm-6 form-group contact-forms">
-						  <input type="text" class="form-control" placeholder="Phone" required=""> 
+						  <input type="text" class="form-control" placeholder="Телефон" required=""> 
 						</div>
 						<div class="col-sm-6 form-group contact-forms">
-						  <input type="text" class="form-control" placeholder="Date" required=""> 
+						  <input type="text" class="form-control" placeholder="Дата" required=""> 
 						</div>
 						<div class="col-sm-6 form-group contact-forms">
 							<select class="form-control" id="adults">
-								<option>Adults</option>
+								<option>Взрослые люди</option>
 								<option>1</option>
 								<option>2</option>
 								<option>3</option>
 								<option>4</option>
-								<option>5 or more</option>
+								<option>5 или больше</option>
 							</select>
 						</div>
 						<div class="col-sm-6 form-group contact-forms">
 							<select class="form-control" id="kids">
-								<option>Kids</option>
+								<option>Дети</option>
 								<option>1</option>
 								<option>2</option>
 								<option>3</option>
 								<option>4</option>
-								<option>5 or more</option>
+								<option>5 или больше</option>
 							</select>
 						</div>
 						<div class="col-md-12 form-group contact-forms">
-						  <textarea class="form-control" placeholder="Message" rows="3" required=""></textarea>
+						  <textarea class="form-control" placeholder="Сообщение" rows="3" required=""></textarea>
 						</div>
 						<div class="col-md-12 booking-button">
-							<button class="btn btn-block sent-butnn">Book Now</button>
+							<button class="btn btn-block sent-butnn">Забронировать Сейчас</button>
 						</div>
 					</form>
 				</div>
@@ -137,18 +137,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="row footer-top">
 			<div class="col-lg-3 col-sm-6 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Address</h3>
+					<h3>Адрес</h3>
 				</div>
 				<div class="footer-text">
-					<p>Location : 1234 lock, Charlotte, North Carolina, United States</p>
-					<p>Phone : +12 534894364</p>
-					<p>Email : <a href="mailto:info@example.com">info@example.com</a></p>
+					<p>Расположение: 1234 lock, Charlotte, North Carolina, United States</p>
+					<p>Телефон: +12 534894364</p>
+					<p>Электронная почта: <a href="mailto:info@example.com">info@example.com</a></p>
 					<p>Fax : +12 534894364</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-sm-6 footer-grid_section mt-sm-0 mt-4">
 				<div class="footer-title">
-					<h3>About Us</h3>
+					<h3>О нас</h3>
 				</div>
 				<div class="footer-text">
 					<p>Vivamus magna justo, laci niats eget consectetur sed, conval lis at tellus. Nulla quis lorem ipnt libero.
@@ -163,7 +163,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Travel Places</h3>
+					<h3>Места для путешествий</h3>
 				</div>
 				<div class="row">
 					<ul class="col-6 links">
@@ -185,7 +185,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Newsletter</h3>
+					<h3>Новостная рассылка</h3>
 				</div>
 				<div class="footer-text">
 					 <p>
