--- a/booking.html
+++ b/booking.html
@@ -68,7 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container py-lg-5 py-sm-4">
 		<h2 class="heading text-capitalize text-center mb-lg-5 mb-4">Забронируйте Тур</h2>
 		<div class="contact-grids">
-			<div class="row">
+			<div class="row" style="justify-content: center;">
 				<div class="col-lg-7 contact-left-form">
 					<form action="#" method="post" class="row">
 						<div class="col-sm-6 form-group contact-forms">
