--- a/booking.html
+++ b/booking.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 <title>Новый поворот</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
