--- a/contact.html
+++ b/contact.html
@@ -107,18 +107,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="col-lg-6 col-md-6 contact-left-form">
 						<form action="#" method="post">
 							<div class=" form-group contact-forms">
-							  <input type="text" class="form-control" placeholder="Name" required="">
+							  <input type="text" class="form-control" placeholder="Имя" required="">
 							</div>
 							<div class="form-group contact-forms">
-							  <input type="email" class="form-control" placeholder="Email" required="">
+							  <input type="email" class="form-control" placeholder="Эл.почта" required="">
 							</div>
 							<div class="form-group contact-forms">
-							  <input type="text" class="form-control" placeholder="Phone" required=""> 
+							  <input type="text" class="form-control" placeholder="Телефон" required=""> 
 							</div>
 							<div class="form-group contact-forms">
-							  <textarea class="form-control" placeholder="Message" rows="3" required=""></textarea>
+							  <textarea class="form-control" placeholder="Сообщение" rows="3" required=""></textarea>
 							</div>
-							<button class="btn btn-block sent-butnn">Send</button>
+							<button class="btn btn-block sent-butnn">Отправить</button>
 						</form>
 					</div>
 					<div class="col-lg-6 col-md-6 contact-right pl-lg-5">
