--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="counter">
 					<span class="fa fa-users"></span>
 					<div class="timer count-title count-number number3" data-max="10">8</div>
-					<p class="count-text text-uppercase">НАПРАВЛЕНИЯ</p>
+					<p class="count-text text-uppercase">НАПРАВЛЕНИЙ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
