--- a/booking.html
+++ b/booking.html
@@ -103,6 +103,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<option>5 или больше</option>
 							</select>
 						</div>
+                                                <div class="col-md-12 form-group contact-forms">
+							<select class="form-control" id="#">
+								<option>Тур</option>
+								<option>Индия</option>
+								<option>США</option>
+								<option>Франция</option>
+								<option>Турция</option>
+								<option>Грузия</option>
+							</select>
+						</div>
 						<div class="col-md-12 form-group contact-forms">
 						  <textarea class="form-control" placeholder="Сообщение" rows="3" required=""></textarea>
 						</div>
