--- a/index.html
+++ b/index.html
@@ -328,11 +328,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/china.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
@@ -349,11 +349,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/malaysia.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
@@ -370,11 +370,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/japan.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
@@ -391,11 +391,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/singapore.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
@@ -436,10 +436,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					Lorem ipsum dolor.</p>
 				</div>
 				<ul class="social_section_1info">
-					<li class="mb-2 facebook"><a href="#"><span class="fa fa-facebook"></span></a></li>
-					<li class="mb-2 twitter"><a href="#"><span class="fa fa-twitter"></span></a></li>
-					<li class="google"><a href="#"><span class="fa fa-google-plus"></span></a></li>
-					<li class="linkedin"><a href="#"><span class="fa fa-linkedin"></span></a></li>
+					<li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span class="fab fa-facebook-f"></span></a></li>
+					<li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span class="fab fa-instagram"></span></a></li>
+					<li class="viber"><a href="https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp"><span class="fab fa-viber"></span></a></li>
+					<li class="telegram"><a href="tg://resolve?domain="><span class="fab fa-telegram-plane"></span></a></li>
 				</ul>
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
