--- a/index.html
+++ b/index.html
@@ -328,11 +328,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/china.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
@@ -349,11 +349,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/malaysia.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
@@ -370,11 +370,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/japan.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
@@ -391,11 +391,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/singapore.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
