--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
+    <link href="css/font-awesome.min-5.15.2.css" rel="stylesheet"><!-- fontawesome css -->	
+	
 	<!-- //css files -->
 	<!-- aos.css files -->
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -328,11 +330,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/china.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
@@ -349,11 +351,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/malaysia.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
@@ -370,11 +372,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/japan.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
@@ -391,11 +393,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/singapore.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
-							<li><span class="fa fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
