--- a/index.html
+++ b/index.html
@@ -438,10 +438,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					Lorem ipsum dolor.</p>
 				</div>
 				<ul class="social_section_1info">
-					<li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span class="fab fa-facebook-f"></span></a></li>
-					<li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span class="fab fa-instagram"></span></a></li>
-					<li class="viber"><a href="https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp"><span class="fab fa-viber"></span></a></li>
-					<li class="telegram"><a href="tg://resolve?domain="><span class="fab fa-telegram-plane"></span></a></li>
+					<li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><i class="fab fa-facebook-f"></i></a></li>
+					<li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><i class="fab fa-instagram"></i></a></li>
+					<li class="viber"><a href="https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp"><i class="fab fa-viber"></i></a></li>
+					<li class="telegram"><a href="tg://resolve?domain="><i class="fab fa-telegram-plane"></i></a></li>
 				</ul>
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
