--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- css files -->
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
-    <!--<link href="css/font-awesome.min.css" rel="stylesheet">--><!-- fontawesome css -->
-    <link href="css/font-awesome.min-5.15.2.css" rel="stylesheet"><!-- fontawesome css -->	
+    <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
+    <!--<link href="css/font-awesome.min-5.15.2.css" rel="stylesheet">--><!-- fontawesome css -->	
 	
 	<!-- //css files -->
 	<!-- aos.css files -->
