--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- css files -->
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
-    <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
-    <!--<link href="css/font-awesome.min-5.15.2.css" rel="stylesheet">--><!-- fontawesome css -->	
+    <!--<link href="css/font-awesome.min.css" rel="stylesheet">--><!-- fontawesome css -->
+    <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->	
 	
 	<!-- //css files -->
 	<!-- aos.css files -->
@@ -42,9 +42,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<!-- nav -->
 		<nav class="py-md-4 py-3 d-lg-flex">
 			<div id="logo">
-				<h1 class="mt-md-0 mt-2"> <a href="index.html"><span class="fa fa-map-signs"></span> Новый поворот </a></h1>
+				<h1 class="mt-md-0 mt-2"> <a href="index.html"><i class="far fa-map-signs"></i> Новый поворот </a></h1>
 			</div>
-			<label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
+			<label for="drop" class="toggle"><i class="far fa-bars"></i></label>
 			<input type="checkbox" id="drop" />
 			<ul class="menu ml-auto mt-1">
 				<li class="active"><a href="index.html">Главная</a></li>
@@ -162,28 +162,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="row mt-5 text-center">
 			<div class="col-lg-3 col-6">
 				<div class="counter">
-					<span class="fa fa-smile-o"></span>
+					<i class="far fa-smile-o"></i>
 					<div class="timer count-title count-number number1" data-max="500">100</div>
 					<p class="count-text text-uppercase">ДОВОЛЬНЫЕ КЛИЕНТЫ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6">
 				<div class="counter">
-					<span class="fa fa-ship"></span>
+					<i class="far fa-ship"></i>
 					<div class="timer count-title count-number number2" data-max="12">10</div>
 					<p class="count-text text-uppercase">ТУРЫ И ПУТЕШЕСТВИЯ </p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
-					<span class="fa fa-users"></span>
+					<i class="far fa-users"></i>
 					<div class="timer count-title count-number number3" data-max="10">8</div>
 					<p class="count-text text-uppercase">НАПРАВЛЕНИЙ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
-					<span class="fa fa-gift"></span>
+					<i class="far fa-gift"></i>
 					<div class="timer count-title count-number number4" data-max="7">5</div>
 					<p class="count-text text-uppercase">ЛЕТ ОПЫТА</p>
 				</div>
@@ -201,7 +201,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-4 col-sm-6">
 				<div class="grid-info">
 					<div class="icon">
-						<span class="fa fa-map-signs"></span>
+						<i class="far fa-map-signs"></span>
 					</div>
 					<h4>ВЫБЕРИТЕ ПУНКТ НАЗНАЧЕНИЯ</h4>
 					<p class="mt-3">Vestibulum urna ligula, molestie at ante ut, finibus. Integer ultrices finibus sed nisi in convallis sed dolor.</p>
@@ -210,7 +210,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-4 col-sm-6 mt-sm-0 mt-5">
 				<div class="grid-info">
 					<div class="icon">
-						<span class="fa fa-calendar"></span>
+						<i class="far fa-calendar"></i>
 					</div>
 					<h4> ВЫБЕРИТЕ ДАТУ </h4>
 					<p class="mt-3">Vestibulum urna ligula, molestie at ante ut, finibus. Integer ultrices finibus sed nisi in convallis sed dolor.</p>
@@ -219,7 +219,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-4 col-sm-6 mt-lg-0 mt-5">
 				<div class="grid-info">
 					<div class="icon">
-						<span class="fa fa-gift"></span>
+						<i class="far fa-gift"></i>
 					</div>
 					<h4>НАСЛАЖДАЙТЕСЬ ПОЕЗДКОЙ</h4>
 					<p class="mt-3">Vestibulum urna ligula, molestie at ante ut, finibus. Integer ultrices finibus sed nisi in convallis sed dolor.</p>
@@ -239,56 +239,56 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-sm-6">
 				<div class="image-tour position-relative">
 					<img src="images/p1.jpg" alt="" class="img-fluid" />
-					<p><span class="fa fa-tags"></span> <span>20$</span></p>
+					<p><i class="far fa-tags"></i> <span>20$</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Париж, Франция.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
+						<li><i class="far fa-clock-o mr-2"></i>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
 			<div class="col-lg-3 col-sm-6">
 				<div class="image-tour position-relative">
 					<img src="images/p2.jpg" alt="" class="img-fluid" />
-					<p><span class="fa fa-tags"></span> <span>20$</span></p>
+					<p><i class="far fa-tags"></i> <span>20$</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Лос-Анджелес, США.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
+						<li><i class="far fa-clock-o mr-2"></i>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
 					<img src="images/p3.jpg" alt="" class="img-fluid" />
-					<p><span class="fa fa-tags"></span> <span>20$</span></p>
+					<p><i class="far fa-tags"></i> <span>20$</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Агра, Индия.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
+						<li><i class="far fa-clock-o mr-2"></i>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
 					<img src="images/p4.jpg" alt="" class="img-fluid" />
-					<p><span class="fa fa-tags"></span> <span>20$</span></p>
+					<p><i class="far fa-tags"></i> <span>20$</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Париж, Франция.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
+						<li><i class="far fa-clock-o mr-2"></i>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
@@ -330,11 +330,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/china.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
 						</ul>
 					</div>
 				</div>
@@ -351,11 +351,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/malaysia.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
 						</ul>
 					</div>
 				</div>
