--- a/index.html
+++ b/index.html
@@ -372,11 +372,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/japan.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
 						</ul>
 					</div>
 				</div>
@@ -393,11 +393,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/singapore.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
+							<li><i class="far fa-star"></i></li>
 						</ul>
 					</div>
 				</div>
