--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 <title>Новый поворот</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +22,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
-    <!--new <link href="css/font-awesome.min.css" rel="stylesheet">--><!-- fontawesome css -->	
+    <!--<link href="css/font-awesome.min.css" rel="stylesheet">--><!-- fontawesome css -->	
 	
 	<!-- //css files -->
 	<!-- aos.css files -->
