--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<!-- nav -->
 		<nav class="py-md-4 py-3 d-lg-flex">
 			<div id="logo">
-				<h1 class="mt-md-0 mt-2"> <a href="index.html"><i class="far fa-map-signs"></i> Новый поворот </a></h1>
+				<h1 class="mt-md-0 mt-2"> <a href="index.html"><span class="fa fa-map-signs"></span> Новый поворот </a></h1>
 			</div>
-			<label for="drop" class="toggle"><i class="far fa-bars"></i></label>
+			<label for="drop" class="toggle"><span class="fa fa-bars"></i></label>
 			<input type="checkbox" id="drop" />
 			<ul class="menu ml-auto mt-1">
 				<li class="active"><a href="index.html">Главная</a></li>
@@ -163,28 +163,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="row mt-5 text-center">
 			<div class="col-lg-3 col-6">
 				<div class="counter">
-					<i class="far fa-smile-o"></i>
+					<span class="fa fa-smile-o"></span>
 					<div class="timer count-title count-number number1" data-max="500">100</div>
 					<p class="count-text text-uppercase">ДОВОЛЬНЫЕ КЛИЕНТЫ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6">
 				<div class="counter">
-					<i class="far fa-ship"></i>
+					<span class="fa fa-ship"></span>
 					<div class="timer count-title count-number number2" data-max="12">10</div>
 					<p class="count-text text-uppercase">ТУРЫ И ПУТЕШЕСТВИЯ </p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
-					<i class="far fa-users"></i>
+					<span class="fa fa-users"></span>
 					<div class="timer count-title count-number number3" data-max="10">8</div>
 					<p class="count-text text-uppercase">НАПРАВЛЕНИЙ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
-					<i class="far fa-gift"></i>
+					<span class="fa fa-gift"></span>
 					<div class="timer count-title count-number number4" data-max="7">5</div>
 					<p class="count-text text-uppercase">ЛЕТ ОПЫТА</p>
 				</div>
@@ -202,7 +202,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-4 col-sm-6">
 				<div class="grid-info">
 					<div class="icon">
-						<i class="far fa-map-signs"></span>
+						<span class="fa fa-map-signs"></span>
 					</div>
 					<h4>ВЫБЕРИТЕ ПУНКТ НАЗНАЧЕНИЯ</h4>
 					<p class="mt-3">Vestibulum urna ligula, molestie at ante ut, finibus. Integer ultrices finibus sed nisi in convallis sed dolor.</p>
@@ -211,7 +211,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-4 col-sm-6 mt-sm-0 mt-5">
 				<div class="grid-info">
 					<div class="icon">
-						<i class="far fa-calendar"></i>
+						<span class="fa fa-calendar"></span>
 					</div>
 					<h4> ВЫБЕРИТЕ ДАТУ </h4>
 					<p class="mt-3">Vestibulum urna ligula, molestie at ante ut, finibus. Integer ultrices finibus sed nisi in convallis sed dolor.</p>
@@ -220,7 +220,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-4 col-sm-6 mt-lg-0 mt-5">
 				<div class="grid-info">
 					<div class="icon">
-						<i class="far fa-gift"></i>
+						<span class="fa fa-gift"></i>
 					</div>
 					<h4>НАСЛАЖДАЙТЕСЬ ПОЕЗДКОЙ</h4>
 					<p class="mt-3">Vestibulum urna ligula, molestie at ante ut, finibus. Integer ultrices finibus sed nisi in convallis sed dolor.</p>
@@ -240,21 +240,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-sm-6">
 				<div class="image-tour position-relative">
 					<img src="images/p1.jpg" alt="" class="img-fluid" />
-					<p><i class="far fa-tags"></i> <span>20$</span></p>
+					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Париж, Франция.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><i class="far fa-clock-o mr-2"></i>Продолжительность: <span>10 Дней</span></li> 
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
 			<div class="col-lg-3 col-sm-6">
 				<div class="image-tour position-relative">
 					<img src="images/p2.jpg" alt="" class="img-fluid" />
-					<p><i class="far fa-tags"></i> <span>20$</span></p>
+					<p><span class="far fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Лос-Анджелес, США.</h6>
