--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><i class="far fa-clock-o mr-2"></i>Продолжительность: <span>10 Дней</span></li> 
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
@@ -275,7 +275,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><i class="far fa-clock-o mr-2"></i>Продолжительность: <span>10 Дней</span></li> 
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
